apply plugin: 'com.android.application'
apply plugin: 'org.greenrobot.greendao'
apply plugin: 'androidx.navigation.safeargs'
apply plugin: 'org.jetbrains.kotlin.android'

android {
    compileSdkVersion 33


    defaultConfig {
        applicationId "com.zane.smapiinstaller"
        minSdkVersion 21
        //noinspection ExpiredTargetSdkVersion
        targetSdkVersion 33
        versionCode 77
        versionName "3.18.3.3"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
        lintOptions {
            abortOnError false
        }
    }

    buildTypes {
        release {
            minifyEnabled true
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            minifyEnabled true
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        // Sets Java compatibility to Java 8
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }

    bundle {
        language {
            // Specifies that the app bundle should not support
            // configuration APKs for language resources. These
            // resources are instead packaged with each base and
            // dynamic feature APK.
            enableSplit = false
        }
    }

    buildFeatures {
        viewBinding true
    }
    namespace 'com.zane.smapiinstaller'
}

greendao {
    schemaVersion 1 //版本号，升级时可配置
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'androidx.appcompat:appcompat:1.5.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.android.material:material:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
    implementation "androidx.navigation:navigation-ui-ktx:2.5.2"
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    //noinspection GradleDynamicVersion,GradleDependency
    implementation 'androidx.webkit:webkit:1.4.+'
    implementation "androidx.documentfile:documentfile:1.0.1"
    // https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
    implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.67'
    implementation 'com.afollestad.material-dialogs:core:3.3.0'
    implementation 'com.afollestad.material-dialogs:input:3.3.0'
    implementation 'com.afollestad.material-dialogs:lifecycle:3.3.0'
    implementation 'com.lmntrx.android.library.livin.missme:missme:0.1.5'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '30.1-android'
    // https://mvnrepository.com/artifact/org.zeroturnaround/zt-zip
    implementation group: 'org.zeroturnaround', name: 'zt-zip', version: '1.14'
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
    // https://mvnrepository.com/artifact/commons-io/commons-io
    implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
    implementation 'com.lzy.net:okgo:3.0.4'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.1'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.1'
    // https://mvnrepository.com/artifact/org.lz4/lz4-pure-java
    implementation group: 'org.lz4', name: 'lz4-pure-java', version: '1.7.0'
    implementation 'com.github.getActivity:XXPermissions:16.2'

    implementation 'com.github.didikee:AndroidDonate:0.1.0'
    implementation 'com.hjq:language:6.0'

    api 'org.greenrobot:greendao:3.3.0'
    api 'org.greenrobot:greendao-generator:3.3.0'
    implementation 'androidx.core:core-ktx:1.10.1'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'

    testImplementation 'junit:junit:4.13.1'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
    implementation 'com.android.support:multidex:1.0.3'

    def appCenterSdkVersion = '3.0.0'
    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
}
